<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
      <parent>
         <groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.6.2</version>
		<relativePath/><!-- lookup parent from repository -->
	  </parent>
    <groupId>rs.atekom</groupId>
    <artifactId>infosystem.desk</artifactId>
    <version>0.0.1</version>
    <name>infosystem</name>
	<description>Atekom Desktop Aplikacija</description>

    <properties>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <maven.compiler.source>19</maven.compiler.source>
      <maven.compiler.target>19</maven.compiler.target>
      <!-- <java.version>14</java.version>-->
    </properties>

	<dependencies>
		<dependency>
	        <groupId>rs.atekom</groupId>
            <artifactId>infosystem.baza</artifactId>
            <version>0.1.0-SNAPSHOT</version>
	    </dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-integration</artifactId>
        </dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.junit.vintage</groupId>
					<artifactId>junit-vintage-engine</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>


        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx</artifactId>
            <version>14</version>
            <type>pom</type>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>14</version>
        </dependency>
        <dependency>
        	<groupId>org.openjfx</groupId>
        	<artifactId>javafx-base</artifactId>
        	<version>14</version>
        </dependency>
                <dependency>
        	<groupId>org.openjfx</groupId>
        	<artifactId>javafx-media</artifactId>
        	<version>14</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>14</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>14</version>
        </dependency>
	    <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>11.1.0</version>
        </dependency>
        <!--  <dependency>
        	<groupId>org.openjfx</groupId>
        	<artifactId>javafx-swing</artifactId>
        	<version>14.0.1</version>
        </dependency>-->
        <dependency>
            <groupId>org.webjars</groupId>
            <artifactId>font-awesome</artifactId>
            <version>5.14.0</version>
        </dependency>
        <dependency>
            <groupId>com.dlsc.formsfx</groupId>
            <artifactId>formsfx-core</artifactId>
            <version>1.3.1</version>
        </dependency>
        <dependency>
            <groupId>eu.hansolo</groupId>
            <artifactId>tilesfx</artifactId>
            <version>11.41</version>
        </dependency>
        <dependency>
            <groupId>net.sf.jasperreports</groupId>
            <artifactId>jasperreports</artifactId>
            <version>6.13.0</version>
        </dependency>
           <dependency>
            <groupId>win.zqxu</groupId>
            <artifactId>jrviewer-fx</artifactId>
            <version>0.1.1</version>
        </dependency>
        <dependency>
        	<groupId>ar.com.fdvs</groupId>
        	<artifactId>DynamicJasper</artifactId>
        	<version>5.3.0</version>
        </dependency>
        <dependency>
        	<groupId>ar.com.fdvs</groupId>
        	<artifactId>DynamicJasper-core-fonts</artifactId>
        	<version>2.0</version>
        </dependency>
        <dependency>
        	<groupId>ar.com.fdvs</groupId>
        	<artifactId>DynamicJasper-test-fonts</artifactId>
        	<version>2.0.0</version>
        </dependency>
	</dependencies>

	<build>
	  <finalName>${project.name}-${project.version}</finalName>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
				   <executable>true</executable>
				</configuration>
			</plugin>
			<!--  
			<plugin>
           <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-assembly-plugin</artifactId>
                <executions>
                   <execution>
                     <phase>package</phase>
                     <goals>
                       <goal>single</goal>
                     </goals>
                     <configuration>
                         <archive>
                         <manifest>
                           <mainClass>
                              rs.atekom.infosystem.desk.AtekomDeskApplication
                           </mainClass>
                         </manifest>
                         </archive>
                         <descriptorRefs>
                             <descriptorRef>jar-with-dependencies</descriptorRef>
                         </descriptorRefs>
                     </configuration>
                   </execution>
                 </executions>
         </plugin>
         -->
		</plugins>
	</build>

</project>
